# times

./: LICENSE  README.md  pyproject.toml
src/times/: cli.py  lib.py  main.py
tests/: test_play.py
