[project]
name = "times"
version = "0.1.0"
description = "Simple pomodoro cli on terminal"
authors = [
    {name = "Bruno Davi", email = "48166556+brunodavi@users.noreply.github.com"},
]
dependencies = [
    "click>=8.1.7",
    "playsound3>=2.2.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
t = "times.main:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = 'python -m unittest discover -vvv'
